--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-minimal-pie-chart": "^8.4.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "remove-accents": "^0.4.4",
