--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "axios": "^1.2.3",
     "babel-plugin-macros": "^3.1.0",
     "chai": "^4.3.7",
+    "font-color-contrast": "^11.1.0",
+    "fontfaceobserver": "^2.3.0",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-loading-icons": "^1.1.0",
     "react-minimal-pie-chart": "^8.4.0",
+    "react-on-images-loaded": "^2.2.8",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "remove-accents": "^0.4.4",
