Added ability to paste Google Drive file link, and altered Update component / created sub-components related to this

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "chai": "^4.3.7",
     "font-color-contrast": "^11.1.0",
     "fontfaceobserver": "^2.3.0",
+    "fs": "^0.0.1-security",
+    "gapi-script": "^1.2.0",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.0",
     "react-loading-icons": "^1.1.0",
     "react-minimal-pie-chart": "^8.4.0",
