--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.2.3",
+    "axios-retry": "^3.4.0",
     "babel-plugin-macros": "^3.1.0",
     "chai": "^4.3.7",
     "font-color-contrast": "^11.1.0",
