--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fontfaceobserver": "^2.3.0",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
