--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "fontfaceobserver": "^2.3.0",
     "fs": "^0.0.1-security",
     "gapi-script": "^1.2.0",
+    "get-user-locale": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mocha": "^10.2.0",
+    "os-locale": "^6.0.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
