--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-google-drive-picker": "^1.2.0",
     "react-google-login": "^5.2.2",
     "react-hot-toast": "^2.4.0",
     "react-loading-icons": "^1.1.0",
